2009-02-23  Sjors Gielen <mailinglist@dazjorz.com>

	* Makefile.in: Add DESTDIR functionality.

2008-10-12  Christopher Faylor  <me+cygwin@cgf.cx>

	* Makefile.in: Rearrange to avoid -mno-cygwin.
	* configure.in: Use mingw front-end from utils directory as compiler
	front-end.
	* configure: Regenerate.
	* cyglsa.c (cyglsa_printf): Rename from 'printf' to avoid a compiler
	error.
	(print_sid, print_groups, print_privs, print_dacl, print_tokinf,
	LsaApLogonUserEx): Ditto.

2008-08-13  Corinna Vinschen  <corinna@vinschen.de>

	* cyglsa-config: Copy the DLL instead of moving.

2008-07-16  Corinna Vinschen  <corinna@vinschen.de>

	* cyglsa-config: Always create a /bin/cyglsa directory and copy the
	LSA DLL there.  Register this copy in the registry.

2008-07-15  Corinna Vinschen  <corinna@vinschen.de>

	* cyglsa.c: Include ntddk.h again, but only if __MINGW32__ is defined.
	* cyglsa64.dll: Regenerate.
	* make-64bit-version-with-visual-c.bat: Fix comment.

2008-07-13  Corinna Vinschen  <corinna@vinschen.de>

	* cyglsa.c: Don't include ntddk.h.
	(RtlInitEmptyUnicodeString): Use Visual-C compatible "__inline" instead
	of "inline".
	(uni_alloc): Change second argument to USHORT.
	(printf): Move definition of ap to make Visual-C++ happy.
	(LsaApLogonUserEx): Compute size of datastructure returned to
	LSA on 64 bit systems correctly to avoid heap corruption.
	* cyglsa64.dll: Regenerate.
	* make-64bit-version-with-visual-c.bat: Accommodate newer Microsoft
	toolchains.  Add more comment.
	* mslsa.def: Export LsaApLogonUserEx instead of LsaApLogonUser.

2008-07-11  Corinna Vinschen  <corinna@vinschen.de>

	* cyglsa.c (LsaApLogonUserEx): Accommodate the fact that authinf->domain
	and authinf->username are now of type WCHAR.  Change sam_username and
	sam_u size to be deifned in terms of MAX_DOMAIN_NAME_LEN instead of
	INTERNET_MAX_HOST_NAME_LENGTH.

2008-07-10  Corinna Vinschen  <corinna@vinschen.de>

	* cyglsa.c: Revamp debugging output.